--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "axios": "^1.8.4",
     "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
